# ml_gcp_api_labs_back_end

./: pyproject.toml  test.py
src/app/: main.py
src/app/core/: settings.py
src/app/models/: classify_analysis.py  cnl_api.py  entity_analysis.py  sentiment_analysis.py  translation_models.py
src/app/repositories/: cloud_translate.py  cnl_api.py  text_to_speech.py
src/app/routers/: cloud_translate.py  cnl_api.py  text_to_speech.py
src/app/services/: cloud_translate.py  cnl_api.py  text_to_speech.py
src/app/utils/: cloud_translante.py
src/app/utils/enums/: TargetLanguage.py  aiv_status.py
